<resources>
    <string name="app_name">Wallet Home</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">June 5 2020</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="amount">6000000.00</string>
    <string name="email">Email</string>
    <string name="hint_email">youremail@email.com</string>
    <string name="password">Password</string>
    <string name="hint_password">your password here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account">Don\'t have an account? Sign up</string>
    <string name="register">Register</string>
    <string name="already_user">Already a user? Login</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="dashboard">Dashboard</string>
    <string name="AMOUNT">AMOUNT:</string>
    <string name="TYPE">TYPE:</string>
    <string name="NOTE">NOTE:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="change_theme">Change Theme</string>
</resources>
