<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    android:layout_margin="10dp"
    android:elevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/type_expense_ds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/type"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="?android:textAppearanceLarge"/>

        <TextView
            android:id="@+id/amount_expense_ds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/amount"
            android:textColor="@color/colorAccent"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/date_expense_ds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textColor="@color/colorGreenTheme"
            android:textAppearance="?android:textAppearanceMedium"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>